--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ unicode-width = "0.1.13"
 urlencoding = "2.1.3"
 versions = "6.3.1"
 which = "6.0.2"
+winapi = { version = "0.3.9", features = ["processenv", "winbase"] }
 yaml-rust2 = "0.8.1"
 
 process_control = { version = "4.1.0", features = ["crossbeam-channel"] }
